--- a/demo/package.json
+++ b/demo/package.json
@@ -27,7 +27,8 @@
     "bootstrap": "~3.3.7",
     "hapi": "~16.0.1",
     "inert": "~4.0.3",
-    "jquery": "~3.1.1"
+    "jquery": "~3.1.1",
+    "opossum": "1.0.0"
   },
   "bugs": {
     "url": "https://github.com/bucharest-gold/opossum/issues"
